# davredirector

./: README.md
app/: Dockerfile  main.js  pyproject.toml  server.py
docker/: docker-compose.override.yml  docker-compose.yml
scripts/: compose.sh
