[tool.poetry]
name = "davredirector"
version = "0.1.0"
description = ""
authors = [
    "Florian Apolloner <florian@apolloner.eu>",
    "Carlos Fdez. Llamas <hello@sirikon.me>"
]

[tool.poetry.dependencies]
python = "^3.7"
starlette = "^0.13.0"
uvicorn = "^0.10.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
